force-app/main/default/objects/Integration_Site_Staff__c/Integration_Site_Staff__c.object-meta.xml
<CustomObject>
    <label>Integration Site Staff</label>
    <nameField>
        <displayFormat>IN Staff #{0000}</displayFormat>
        <label>Integration Site Staff  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Site Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>