force-app/main/default/objects/Integration_Site_Staff__c/fields/protocolId__c.field-meta.xml
<CustomField>
    <fullName>protocolId__c</fullName>
    <label>protocolId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>