force-app/main/default/objects/Integration_Site_Staff__c/fields/Site_Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Site_Email_Key__c</fullName>
    <description>This key is the combination of study site number and email id</description>
    <externalId>true</externalId>
    <label>Site_Email_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>