force-app/main/default/objects/Integration_Site_Staff__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <label>Zip Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>